# optd-testing

./: .gitignore  Cargo.toml  README.md  q3.params.sql  q3.sh  simple.sql
connectors/datafusion/: Cargo.toml
executeResults/2026-02-27_15-21-43/: plan_X0_0.25_X1_0.25.txt  plan_X0_0.25_X1_0.75.txt  plan_X0_0.75_X1_0.25.txt  plan_X0_0.75_X1_0.75.txt
executeResults/2026-02-27_15-25-57/: plan_X0_0.10_X1_0.10.txt  plan_X0_0.10_X1_0.30.txt  plan_X0_0.10_X1_0.50.txt  plan_X0_0.10_X1_0.70.txt  plan_X0_0.10_X1_0.90.txt  plan_X0_0.30_X1_0.10.txt  plan_X0_0.30_X1_0.30.txt  plan_X0_0.30_X1_0.50.txt  plan_X0_0.30_X1_0.70.txt  plan_X0_0.30_X1_0.90.txt  plan_X0_0.50_X1_0.10.txt  plan_X0_0.50_X1_0.30.txt  plan_X0_0.50_X1_0.70.txt  plan_X0_0.50_X1_0.90.txt  plan_X0_0.70_X1_0.10.txt  plan_X0_0.70_X1_0.30.txt  plan_X0_0.70_X1_0.50.txt  plan_X0_0.70_X1_0.70.txt  plan_X0_0.70_X1_0.90.txt  plan_X0_0.90_X1_0.10.txt  plan_X0_0.90_X1_0.30.txt  plan_X0_0.90_X1_0.50.txt  plan_X0_0.90_X1_0.70.txt  plan_X0_0.90_X1_0.90.txt
executeResults/2026-03-02_00-56-47/: plan_X0_0.50_X1_0.50.txt
optd/core/: Cargo.toml
outputer/: Cargo.toml
outputer/src/: main.rs  separate_json.rs
outputs/: nonpresistent.txt  output2.txt  presistent.txt  teste.txt  texto.txt  texto2.txt  texto3.txt
postgresStats/: Dockerfile  populate.sql  stats.sql
sqlExploration/: README.md  converter.py  graph-3.txt  optdLogical.sql  plotmemo.py  pop-1.sql  pop-2.sql  pop-3.sql  run-1.sql  run-2.sql  run-3.sql
sqlFiles/: logical.sql  memo.sql  memojson.sql  memopopulate.sql  populate.sql  q3.example.sql  simple.sql
(+41 files in other folders)
